# gafro_benchmarks

./: .gitignore  CMakeLists.txt  README  README.md  package.xml
robots/: panda.urdf  panda_kdl.urdf  panda_mujoco.xml  panda_pinocchio.urdf
robots/mujoco_elements/: bottle.xml  panda.xml  panda_left.xml  panda_right.xml  scene.xml
robots/mujoco_elements/franka_emika_panda/: panda.xml
robots/mujoco_elements/franka_emika_panda/assets/: bottle.xml
src/gafro_benchmarks/: Benchmark.cpp  Benchmark.hpp  BenchmarkDQRobotics.cpp  BenchmarkDQRobotics.hpp  BenchmarkGafro.cpp  BenchmarkGafro.hpp  BenchmarkKDL.cpp  BenchmarkKDL.hpp  BenchmarkMujoco.cpp  BenchmarkMujoco.hpp  BenchmarkPinocchio.cpp  BenchmarkPinocchio.hpp  BenchmarkRBDL.cpp  BenchmarkRBDL.hpp  BenchmarkRaisim.cpp  BenchmarkRaisim.hpp  CMakeLists.txt  compare_results.cpp  gafro_benchmark_package_config.h.in  run_benchmarks.cpp
